// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <h1
    className="MuiTypography-root-92 MuiTypography-display2-95 MuiTypography-gutterBottom-109"
  >
    Title
  </h1>
  <h2
    className="MuiTypography-root-92 MuiTypography-title-98 MuiTypography-colorPrimary-112"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with neither title nor pageTitle 1`] = `null`;

exports[`snapshot with only pageTitle 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <h2
    className="MuiTypography-root-92 MuiTypography-title-98 MuiTypography-colorPrimary-112"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with only title 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <h1
    className="MuiTypography-root-92 MuiTypography-display2-95 MuiTypography-gutterBottom-109"
  >
    Title
  </h1>
</div>
`;
